--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.gm-ui-hover-effect {
+  outline: none !important;
+}
