--- a/src/components/atoms/Sidebar/styles.module.css
+++ b/src/components/atoms/Sidebar/styles.module.css
@@ -1,6 +1,6 @@
 .aside {
-  padding: 1rem;
+  padding: var(--SPACING_NORMAL);
   flex-basis: 250px;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
 }
