--- a/src/components/organisms/Filters/styles.module.css
+++ b/src/components/organisms/Filters/styles.module.css
@@ -1,3 +1,4 @@
 .item {
-  margin-bottom: var(--SPACING_EXTRA_LARGE);
+  padding-left: var(--SPACING_EXTRA_LARGE);
+  padding-right: var(--SPACING_EXTRA_LARGE);
 }
