--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -3,6 +3,7 @@
 
   --COLOR_WHITE: #ffffff;
 
+  --COLOR_GRAY_0: #f8f8f8;
   --COLOR_GRAY_1: #999999;
   --COLOR_GRAY_2: #666666;
   --COLOR_GRAY_3: #333333;
