--- a/src/components/molecules/Sidebar/styles.module.css
+++ b/src/components/molecules/Sidebar/styles.module.css
@@ -12,7 +12,7 @@
     height: 0;
   }
   to {
-    height: 90vh;
+    height: var(--HEIGHT_SIDEBAR);
   }
 }
 
@@ -27,7 +27,7 @@
 
 @keyframes SidebarOutMobile {
   from {
-    height: 90vh;
+    height: var(--HEIGHT_SIDEBAR);
   }
   to {
     height: 0;
@@ -56,7 +56,7 @@
 .sidebar__visible {
   animation-name: none;
   width: 100vw;
-  height: 90vh;
+  height: var(--HEIGHT_SIDEBAR);
 }
 
 .sidebar__hide {
@@ -64,11 +64,15 @@
 }
 
 .container {
-  height: 100%;
+  display: flex;
   width: 100vw;
+  height: var(--HEIGHT_SIDEBAR);
+  overflow: auto;
+  flex-direction: column;
+  padding-bottom: var(--SPACING_EXTRA_LARGE);
 }
 
-@media only screen and (min-width: 780px) {
+@media only screen and (orientation: landscape) {
   .sidebar {
     top: 0;
     bottom: auto;
@@ -90,5 +94,6 @@
 
   .container {
     width: var(--WIDTH_SIDEBAR);
+    height: 100vh;
   }
 }
