--- a/src/components/molecules/FilterButton/styles.module.css
+++ b/src/components/molecules/FilterButton/styles.module.css
@@ -1,20 +1,20 @@
 .button {
+  align-items: center;
+  appearance: none;
+  background: var(--COLOR_WHITE);
+  border-radius: var(--RADIUS_MAP_CONTROL);
+  border: none;
+  box-shadow: var(--SHADOW);
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 70px;
   justify-content: center;
-  background: var(--COLOR_WHITE);
   margin: var(--SPACING_NORMAL);
   padding: 0px;
-  border: none;
   text-transform: none;
-  appearance: none;
-  cursor: pointer;
   user-select: none;
-  border-radius: var(--RADIUS_MAP_CONTROL);
-  height: 70px;
   width: 40px;
-  box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px -1px;
 }
 
 .button svg {
@@ -28,10 +28,10 @@
 }
 
 .button span {
-  font-size: var(--FONT_SIZE_SMALL);
-  line-height: 16px;
-  font-weight: 800;
   color: var(--COLOR_GRAY_1);
+  font-size: var(--FONT_SIZE_SMALL);
+  font-weight: 800;
+  line-height: 16px;
   transition: color var(--TRANSITION_CONTROLS);
 }
 
