--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -5,6 +5,7 @@
 
   --COLOR_WHITE: #ffffff;
 
+  --COLOR_GRAY_LIGHT: #f4f4f4;
   --COLOR_GRAY_1: #999999;
   --COLOR_GRAY_2: #666666;
   --COLOR_GRAY_3: #333333;
