--- a/src/components/atoms/GeolocationButton/styles.module.css
+++ b/src/components/atoms/GeolocationButton/styles.module.css
@@ -3,21 +3,17 @@
   appearance: none;
   border: none;
   display: flex;
-  height: 40px;
+  height: var(--WIDTH_CONTROL);
   justify-content: center;
   padding: 0px;
   text-transform: none;
   user-select: none;
-  width: 40px;
+  width: var(--WIDTH_CONTROL);
 }
 
 .button svg {
   fill: var(--COLOR_GRAY_2);
-  transition: fill var(--TRANSITION_CONTROLS);
-}
-
-.button:hover svg {
-  fill: var(--COLOR_GRAY_3);
+  transition: fill var(--TRANSITION_CONTROL);
 }
 
 .active svg {
