--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,23 +1,29 @@
 :root {
   --WIDTH_SIDEBAR: 335px;
+  --WIDTH_CONTROL: 40px;
 
   --HEIGHT_SIDEBAR: 85vh;
 
   --COLOR_WHITE: #ffffff;
 
-  --COLOR_GRAY_LIGHT: #f4f4f4;
+  --COLOR_GRAY_0: #f0f0f0;
   --COLOR_GRAY_1: #999999;
   --COLOR_GRAY_2: #666666;
-  --COLOR_GRAY_3: #333333;
 
   --COLOR_BLUE: #1890ff;
 
   --FONT_SIZE_SMALL: 10px;
+  --FONT_SIZE_NORMAl: 14px;
+  --FONT_SIZE_BIG: 16px;
+  --FONT_SIZE_TITLE: 20px;
+
+  --FONT_WEIGHT_BOLD: 600;
 
   --SPACING_NORMAL: 10px;
+  --SPACING_MEDIUM: 14px;
   --SPACING_EXTRA_LARGE: 25px;
 
-  --TRANSITION_CONTROLS: 0.5s;
+  --TRANSITION_CONTROL: 0.5s;
   --TRANSITION_SIDEBAR: 0.25s;
 
   --RADIUS_MAP_CONTROL: 2px;
