--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,6 +1,7 @@
 :root {
   --WIDTH_SIDEBAR: 335px;
-  --WIDTH_CONTROL: 40px;
+  --WIDTH_MAP_CONTROL: 40px;
+  --WIDTH_MAP_POPUP: 180px;
 
   --HEIGHT_SIDEBAR: 85vh;
 
@@ -12,7 +13,8 @@
 
   --COLOR_BLUE: #1890ff;
 
-  --FONT_SIZE_SMALL: 10px;
+  --FONT_SIZE_LITTLE: 10px;
+  --FONT_SIZE_SMALL: 13px;
   --FONT_SIZE_NORMAl: 14px;
   --FONT_SIZE_BIG: 16px;
   --FONT_SIZE_TITLE: 20px;
@@ -23,10 +25,11 @@
   --SPACING_MEDIUM: 14px;
   --SPACING_EXTRA_LARGE: 25px;
 
-  --TRANSITION_CONTROL: 0.5s;
+  --TRANSITION_MAP_CONTROL: 0.5s;
   --TRANSITION_SIDEBAR: 0.25s;
 
   --RADIUS_MAP_CONTROL: 2px;
+  --RADIUS_MAP_POPUP: 6px;
 
   --SHADOW: rgb(0 0 0 / 30%) 0px 1px 4px -1px;
 }
