--- a/src/components/atoms/MapFilterButton/styles.module.css
+++ b/src/components/atoms/MapFilterButton/styles.module.css
@@ -9,17 +9,17 @@
   padding: 0px;
   text-transform: none;
   user-select: none;
-  width: var(--WIDTH_CONTROL);
+  width: var(--WIDTH_MAP_CONTROL);
 }
 
 .button svg {
   fill: var(--COLOR_GRAY_2);
-  transition: fill var(--TRANSITION_CONTROL);
+  transition: fill var(--TRANSITION_MAP_CONTROL);
 }
 
 .button span {
   color: var(--COLOR_GRAY_1);
-  font-size: var(--FONT_SIZE_SMALL);
+  font-size: var(--FONT_SIZE_LITTLE);
   font-weight: var(--FONT_WEIGHT_BOLD);
   line-height: 16px;
 }
