--- a/src/components/atoms/MapGeolocationButton/styles.module.css
+++ b/src/components/atoms/MapGeolocationButton/styles.module.css
@@ -3,17 +3,17 @@
   appearance: none;
   border: none;
   display: flex;
-  height: var(--WIDTH_CONTROL);
+  height: var(--WIDTH_MAP_CONTROL);
   justify-content: center;
   padding: 0px;
   text-transform: none;
   user-select: none;
-  width: var(--WIDTH_CONTROL);
+  width: var(--WIDTH_MAP_CONTROL);
 }
 
 .button svg {
   fill: var(--COLOR_GRAY_2);
-  transition: fill var(--TRANSITION_CONTROL);
+  transition: fill var(--TRANSITION_MAP_CONTROL);
 }
 
 .active svg {
