--- a/src/styles/leaflet.css
+++ b/src/styles/leaflet.css
@@ -48,9 +48,9 @@
 
 .leaflet-bar.leaflet-control .leaflet-control-zoom-in,
 .leaflet-bar.leaflet-control .leaflet-control-zoom-out {
-  line-height: calc(var(--WIDTH_CONTROL) - 4px);
-  width: var(--WIDTH_CONTROL);
-  height: var(--WIDTH_CONTROL);
+  line-height: calc(var(--WIDTH_MAP_CONTROL) - 4px);
+  width: var(--WIDTH_MAP_CONTROL);
+  height: var(--WIDTH_MAP_CONTROL);
 }
 
 .leaflet-bar.leaflet-control button {
@@ -62,7 +62,7 @@
 .leaflet-bar.leaflet-control button,
 .leaflet-control-layers.leaflet-control label {
   background-color: var(--COLOR_WHITE);
-  transition: background-color var(--TRANSITION_CONTROL);
+  transition: background-color var(--TRANSITION_MAP_CONTROL);
 }
 
 .leaflet-bar.leaflet-control a:hover,
@@ -77,4 +77,38 @@
 
 .leaflet-control-layers.leaflet-control label:first-child {
   border-right: 1px solid var(--COLOR_GRAY_0);
+}
+
+.leaflet-popup-content-wrapper {
+  border-radius: var(--RADIUS_MAP_POPUP);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content {
+  margin: var(--SPACING_NORMAL);
+  width: var(--WIDTH_MAP_POPUP);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content h3 {
+  margin: 0;
+  font-size: var(--FONT_SIZE_NORMAl);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content .popup-description {
+  margin: 0;
+  font-size: var(--FONT_SIZE_LITTLE);
+  color: var(--COLOR_GRAY_1);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content .popup-link {
+  margin: 0;
+  margin-top: var(--SPACING_NORMAL);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content .popup-link a {
+  font-size: var(--FONT_SIZE_SMALL);
+  color: var(--COLOR_BLUE);
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content .popup-link a:hover {
+  text-decoration: underline;
 }
