--- a/src/components/organisms/Filters/styles.module.css
+++ b/src/components/organisms/Filters/styles.module.css
@@ -2,3 +2,10 @@
   padding-left: var(--SPACING_EXTRA_LARGE);
   padding-right: var(--SPACING_EXTRA_LARGE);
 }
+
+.preloader {
+  display: flex;
+  height: 94px;
+  align-items: center;
+  justify-content: center;
+}
