feat(map): add mobile dimmer

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -13,6 +13,8 @@
 
   --COLOR_BLUE: #1890ff;
 
+  --COLOR_BLACK: #000000;
+
   --FONT_SIZE_LITTLE: 10px;
   --FONT_SIZE_SMALL: 13px;
   --FONT_SIZE_NORMAl: 14px;
