--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -3,7 +3,8 @@
   --WIDTH_MAP_CONTROL: 40px;
   --WIDTH_MAP_POPUP: 180px;
 
-  --HEIGHT_SIDEBAR: 85vh;
+  --HEIGHT_SIDEBAR_BIG: 85vh;
+  --HEIGHT_SIDEBAR_SMALL: 30vh;
 
   --COLOR_WHITE: #ffffff;
 
